--- a/templates/cloudflare/config.yml
+++ b/templates/cloudflare/config.yml
@@ -5,5 +5,5 @@ version: 1.0
 category: "Web service"
 maintainer: "pinyo"
 license: "really free"
-projectURL: "no have URL"
+projectURL: "https://github.com/piny00/malloy"
 
